--- a/style.css
+++ b/style.css
@@ -74,15 +74,22 @@ li a{
     margin: 20px 14px;
     border-radius: 4px;
     border: 1px solid #f2f2f2;
-    background-color:#f2f2f2;
+    background-color: #f2f2f2;
+    transition: background-color .5s;
+}
+.search:hover{
+    background-color: white;
+    border: .5px solid gray;
 }
 .footer-left{
-    position:absolute;
+    position: absolute;
+    float: left;
     left: 0;
-    bottom: 0;
+    bottom: 0;  
 }
 .footer-right{
     position: absolute;
+    float: right;
     right: 0;
     bottom: 0;
 }
